# henkaku

./: .gitignore  README.md  build.sh  go-henkaku-me.prod-config  go-henkaku-xyz.prod-config  krop.rop  sample.config.in  write_pkg_url.py
bootstrap/: CMakeLists.txt  bootstrap.c  compress.c  crc32.c
host/: exploit.html  payload.js  stage2.go  stage2.php
host/pkg/sce_sys/: param.sfo
host/pkg/sce_sys/livearea/contents/: template.xml
installer/: CMakeLists.txt  installer.c
krop/: build_rop.py  rop.S  ropfuscator.py
payload/: aes_key.c  args.h  block_check.py  libc.c  linker.x  loader.c  loader.enc  loader_start.S  payload.c  payload.enc  payload_start.S  user.c  write_pkg_url.py
payload/user/: compress.c  compress.h  config.h.in  graphics.c  graphics.h  molecule_logo.h  user.c
plugin/: CMakeLists.txt  henkaku.h  henkaku.yml  henkaku_settings.xml  kernel.c  language.h  system_settings.xml  taihen.json  user.c
urop/: common.rop  config.rop.in  exploit.py  exploit.rop  exploit.rop.in  functions.rop  loader.py  loader.rop.in  make_rop_array.py  offline_loader.rop.in  offline_stage2.py  relocatable.py  rop.py  simple.rop.in  stage2.rop.in  target_360.py  util.py
urop/webkit-360-pkg/: manifest.xml
urop/webkit-360-pkg/gadgetmaps/: and_lv.xml  and_rl.xml  and_rv.xml  and_vv.xml  call_r0.xml  l.xml  ll.xml  lll.xml  llv.xml  lr.xml  lsl_lv.xml  lsl_rv.xml  lv.xml  lvrvvvv.xml  lvv.xml  lvvvvvv.xml  pivot_l.xml  r.xml  relocate_rop.xml  rlvvv.xml  rv.xml  rvv.xml  rvvvvvv.xml  v.xml  vlv.xml  vrvvvvv.xml  vv.xml  vvv.xml  vvvlv.xml  vvvvv.xml  vvvvvvv.xml
urop/webkit-360-pkg/gadgets/: adds_r0_r1.xml  ands_r1_r0-pop_r4_r5_r6_r7_r8_sb_sl_pc.xml  blx_r2-pop_r4_pc.xml  blx_r3-pop_r4_pc.xml  blx_r4-pop_r4_pc.xml  blx_r4-pop_r4_r5_r6_pc.xml  cmp_r0_r4.xml  ldr_r0_r0-pop_r4_pc.xml  ldr_r1_r0-mov_r0_r1-pop_r4_pc.xml  ldr_r1_r1-blx_sb.xml  ldr_r1_r6-blx_r4.xml  ldrb_r0_r0_pop_r4.xml  lsls_r0_2-pop_r4.xml  lsls_r0_r1-blx_r4.xml  memcpy.xml  mov_r0_r1-pop_r4_pc.xml  mov_r0_r8-mov_r1_r4-blx_r3.xml  mov_r0_sp-blx_r2.xml  mov_r12_r0.xml  mov_r1_r8-blx_r2.xml  mov_r2_r0-mov_r0_r2-pop_r4_pc.xml  mov_r2_r8-blx_r3.xml  mov_r3_r8-blx_r4.xml  mov_r3_r8-blx_r5.xml  mov_r8_r0-mov_r0_r7-mov_r1_r6-blx_r2.xml  mov_sp_r12-pop_pc.xml  mul_r0_r1-bx_lr.xml  pop_pc.xml  pop_r0_pc.xml  pop_r0_r1_pc.xml  pop_r0_r1_r2_pc.xml  pop_r0_r1_r2_r3_r4_r5_pc.xml  pop_r0_r1_r3_pc.xml  pop_r0_r2_r3_r4_pc.xml  pop_r0_r4_pc.xml  pop_r1_pc.xml  pop_r1_r2_pc.xml  pop_r1_r2_r3_pc.xml  pop_r1_r2_r3_r4_pc.xml  pop_r1_r4_r5_pc.xml  (+15 more)
webkit/: exploit.html  exploit.js  payload.js  preprocess.py  stage2.go  stage2.php
